[package]
name = "asmda"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
colored = "3.0.0"
comfy-table = "=7.2.1"
crossterm = "0.29.0"
dirs = "6.0.0"
dotenv = "0.15.0"
fantoccini = { version = "0.22.0", default-features = false, features = ["rustls-tls"] }
once_cell = "1.21.3"
pgp-lib = "1.0.0"
reqwest = { version = "=0.12.23", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
rust-s3 = { version = "0.36.0", default-features = false, features = ["tokio-rustls-tls"]}
rustls = { version = "0.23.32", features = ["ring"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }

[dependencies.uuid]
version = "1.18.1"
# Allows generating custom UUIDs.
features = ["v4"]

[lints.clippy]
redundant_field_names = "deny"
let_and_return = "deny"
expect_fun_call = "deny"
vec_init_then_push = "deny"
