[package]
name = "asmda"
version = "1.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
chrono = "0.4.42"
colored = "3.0.0"
comfy-table = "=7.2.1"
crossterm = "0.29.0"
dirs = "6.0.0"
dotenv = "0.15.0"
fantoccini = { version = "0.22.0", default-features = false, features = ["rustls-tls"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = "0.1.18"
libc = "0.2.177"
once_cell = "1.21.3"
pgp-lib = "1.0.0"
reqwest = { version = "=0.12.23", default-features = false, features = ["rustls-tls"] }
rpassword = "7.4.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rust-s3 = { version = "0.36.0", default-features = false, features = ["tokio-rustls-tls"]}
rustls = { version = "0.23.32", features = ["ring"] }
secrecy = "0.10.3"
serde_json = "1.0.143"
serial_test = "3.2.0"
signal-hook = "0.3.18"
strip-ansi-escapes = "0.2.1"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }

[dependencies.uuid]
version = "1.18.1"
# Allows generating custom UUIDs.
features = ["v4"]

[lints.clippy]
redundant_field_names = "deny"
let_and_return = "deny"
expect_fun_call = "deny"
vec_init_then_push = "deny"
